# redis-cli-py

./: README.md  Taskfile.yaml  main.py  pyproject.toml  requirements.txt  setup.py
redis_cli/: __init__.py  client.py  utils.py
tests/: test_client.py
